Job Stats Implementation (#1446)
* Add swagger for job completion statistics

* Add host to job stats

* Add job stats to core

* Add job profile endpoint

* Add failure_reason to job tickets

* Set core version in job profile

* Add failure_reason to job-ticket input

* Remove redundant destination.get()

* Add tests around analysis jobs

* Move started/completed to transitions subdoc

* Add related_container_ids field to job

* Allow profile subdoc on prepare-complete

* Add group, project and tags indexes

* Set total execution time for canceled jobs
