# api/config.py
@@ -183,6 +183,10 @@ def initialize_db():
     db.analyses.create_index([('parent.type', 1), ('parent.id', 1)])
     db.jobs.create_index([('inputs.id', 1), ('inputs.type', 1)])
     db.jobs.create_index([('state', 1), ('now', 1), ('modified', 1)])
+    db.jobs.create_index('related_container_ids')
+    db.jobs.create_index('group')
+    db.jobs.create_index('project')
+    db.jobs.create_index('tags')
     db.gears.create_index('name')
     db.batch.create_index('jobs')
     db.project_rules.create_index('project_id')
